Delete a lot of bad AI code so we can start over